@@ -76,6 +76,7 @@ dependencies {
 }
 
 test {
+    jvmArgs '--add-opens', 'java.base/java.net=ALL-UNNAMED'
     if (platform.startsWith("mac")) {
         // jvmArgs "-XstartOnFirstThread"
         println("WARNING: tests that touch GUI will fail on Mac due to Cocoa restrictions and Gradle unable to run tests on main thread")
@@ -304,7 +305,7 @@ def jlink(String target, String jrePath, String extraOpts = System.getenv("JLINK
     def jreDir = new File(target, jrePath)
     if (!jreDir.exists()) {
         jreDir.getParentFile().mkdirs()
-        exec("jlink --output $jrePath $extraOpts --compress=2 --no-header-files --no-man-pages --strip-debug --add-modules " + javaModules.join(","), target)
+        exec("jlink --output $jrePath $extraOpts --compress=zip-6 --no-header-files --no-man-pages --strip-debug --add-modules " + javaModules.join(","), target)
         ant.delete(dir: new File(jreDir, "legal"))
     }
 }
